--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.10"
 Flask = "^2.3.2"
 SQLAlchemy = "^2.0.19"
+jsonify = "^0.5"
+Flask-SQLAlchemy = "^3.0.5"
 
 [tool.poetry.dev-dependencies]
 
